fix some icons being in the wrong color and revert unnecessary interface to type change

--- a/projects/bp-gallery/src/components/views/picture/sidebar/picture-info/PictureInfoField.scss
+++ b/projects/bp-gallery/src/components/views/picture/sidebar/picture-info/PictureInfoField.scss
@@ -20,6 +20,7 @@
     &[data-type='#{$name}'] {
       .icon-container,
       .MuiChip-filled,
+      .MuiChip-icon,
       .MuiChip-deleteIcon {
         background: $color;
         color: white;
